# libgweather-rs

./: Cargo.toml  GWeather-4.0.gir  Gir.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/arith/: trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.Not.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/glib/object/: trait.ParentClassIs.js
implementors/glib/types/: trait.StaticType.js
implementors/glib/value/: trait.FromValue.js  trait.ToValue.js  trait.ValueType.js
libgweather/: all.html  enum.ConditionPhenomenon.html  enum.ConditionQualifier.html  enum.DistanceUnit.html  enum.LocationLevel.html  enum.PressureUnit.html  enum.Sky.html  enum.SpeedUnit.html  enum.TemperatureUnit.html  enum.WindDirection.html  index.html  sidebar-items.js  struct.FormatOptions.html  struct.Info.html  struct.Location.html  struct.Provider.html  type.MoonLatitude.html  type.MoonPhase.html
libgweather-sys/: Cargo.toml  Gir.toml  build.rs
libgweather-sys/src/: lib.rs
libgweather-sys/tests/: abi.rs  constant.c  layout.c
libgweather/auto/alias/: type.MoonLatitude.html  type.MoonPhase.html
libgweather/auto/enums/: enum.ConditionPhenomenon.html  enum.ConditionQualifier.html  enum.DistanceUnit.html  enum.LocationLevel.html  enum.PressureUnit.html  enum.Sky.html  enum.SpeedUnit.html  enum.TemperatureUnit.html  enum.WindDirection.html
libgweather/auto/flags/: struct.FormatOptions.html  struct.Provider.html
libgweather/auto/info/: struct.Info.html
libgweather/auto/location/: struct.Location.html
src/: conditions.rs  info.rs  lib.rs  location.rs
src/auto/: alias.rs  enums.rs  flags.rs  info.rs  location.rs  mod.rs  versions.txt
src/libgweather/: conditions.rs.html  info.rs.html  lib.rs.html  location.rs.html
src/libgweather/auto/: alias.rs.html  enums.rs.html  flags.rs.html  info.rs.html  location.rs.html  mod.rs.html
