[package]
name = "libgweather"
version = "4.0.0"
authors = ["Jamie Murphy <jamie@fyralabs.com>"]
readme = "README.md"
homepage = "https://github.com/ItsJamie9494/libgweather-rs"
description = "Rust bindings for libgweather"
license = "MIT"
repository = "https://github.com/ItsJamie9494/libgweather-rs"
documentation = "https://itsjamie9494.github.io/libgweather-rs"
categories = ["api-bindings"]
keywords = ["gtk-rs", "gnome", "weather", "gweather"]
edition = "2021"

[lib]
name = "libgweather"

[features]
dox = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.3"

[dependencies.ffi]
package = "gweather-sys"
path = "./libgweather-sys"
version = "4.0.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"
