[package]
name = "gweather-sys"
version = "4.0.0"
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.gweather4]
name = "gweather4"
version = "4"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gweather_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
