[package]
name = "gweather-sys"
version = "4.0.0"
edition = "2021"
build = "build.rs"
authors = ["Jamie Murphy <jamie@fyralabs.com>"]
readme = "README.md"
homepage = "https://github.com/ItsJamie9494/libgweather-rs"
description = "Rust bindings for libgweather"
license = "MIT"
repository = "https://github.com/ItsJamie9494/libgweather-rs"
documentation = "https://itsjamie9494.github.io/libgweather-rs"
categories = ["api-bindings", "weather", "gweather"]
keywords = ["gtk-rs", "gnome", "weather", "gweather"]

[package.metadata.system-deps.gweather4]
name = "gweather4"
version = "4"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gweather_sys"

[dependencies]
libc = "0.2"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "^0.15"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "^0.15"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "^0.15"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
